--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.neenbedankt.android-apt'
 
 android {
   compileSdkVersion 25
@@ -38,8 +39,11 @@ dependencies {
   compile 'com.squareup.retrofit2:adapter-rxjava:2.0.2'
   compile 'com.squareup.retrofit2:converter-gson:2.0.2'
 
+  compile "com.squareup.retrofit2:converter-scalars:2.1.0"
+  compile 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
+
   //okhttp
-  compile 'com.squareup.okhttp3:okhttp:3.3.0'
+  compile 'com.squareup.okhttp3:okhttp:3.2.0'
   compile 'com.squareup.okhttp3:logging-interceptor:3.2.0'
 
   //rxjava
@@ -48,6 +52,11 @@ dependencies {
   // explicitly depend on RxJava's latest version for bug fixes and new features.
   compile 'io.reactivex:rxjava:1.1.2'
 
+  //log库
+  compile 'com.orhanobut:logger:2.1.1'
 
+  //dagger2
+  compile 'com.google.dagger:dagger:2.5'
+  apt 'com.google.dagger:dagger-compiler:2.5'
 
 }
